# brainrot

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
examples/: main.rs  twitch.rs  youtube.rs
src/: event.rs  identity.rs  lib.rs  multicast.rs  util.rs
src/twitch/: event.rs  identity.rs  mod.rs
src/youtube/: client.rs  context.rs  error.rs  mod.rs  signaler.rs  types.rs  util.rs
src/youtube/types/: browse.rs  get_live_chat.rs  mod.rs  streams_page.rs  video.rs
