[package]
name = "brainrot"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"

[dependencies]
irc = { version = "0.15", default-features = false }
tokio = { version = "1", features = [ "net" ] }
futures-util = { version = "0.3", default-features = false }
thiserror = "1.0"
chrono = { version = "0.4", default-features = false, features = [ "clock", "std" ] }
serde = { version = "1.0", optional = true, features = [ "derive" ] }
uuid = "1.5"

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1", features = [ "rt", "rt-multi-thread", "macros", "net" ] }

[features]
default = [ "tls-native" ]
serde = [ "dep:serde", "chrono/serde", "uuid/serde" ]
tls-native = [ "irc/tls-native" ]
tls-rust = [ "irc/tls-rust" ]
