[package]
name = "brainrot"
description = "A live chat interface for Twitch & YouTube"
version = "0.2.3"
license = "Apache-2.0"
keywords = [ "chat", "twitch", "youtube", "live" ]
authors = [ "Carson M. <carson@pyke.io>" ]
repository = "https://github.com/pykeio/brainrot"
edition = "2024"
rust-version = "1.89"

[dependencies]
tracing = { version = "0.1", default-features = false, features = [ "std" ] }
irc = { version = "1.0", optional = true, default-features = false }
tokio = { version = "1.42", default-features = false, features = [ "net" ] }
futures-util = { version = "0.3", default-features = false, features = [ "std" ] }
thiserror = "2.0"
serde = { version = "1.0", optional = true, features = [ "derive" ] }
uuid = { version = "1.11", optional = true }
simd-json = { version = "0.17", default-features = false, optional = true, features = [ "serde_impl" ] }
http = { version = "1.0", optional = true }
bytes = { version = "1.2", default-features = false, optional = true }
fastrand = { version = "2.3", optional = true }
async-stream-lite = "0.2"
pin-project-lite = "0.2"

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1.42", features = [ "rt", "rt-multi-thread", "macros", "net" ] }
reqwest = "0.12"

[features]
default = [ "tls-native", "twitch", "youtube" ]
twitch = [ "dep:irc", "dep:uuid" ]
youtube = [ "dep:simd-json", "dep:http", "dep:bytes", "dep:fastrand", "dep:serde" ]
serde = [ "dep:serde", "uuid?/serde" ]
tls-native = [ "irc?/tls-native" ]
tls-rust = [ "irc?/tls-rust" ]
